tests/paczka1/fuzzy1/75700832.err
Error in line 2: nn1FB A181 59,0
Error in line 18: 16Z S107 56,4
Error in line 19: 16Z S967 91,2
Error in line 12: nn1FB S967 75,9
Error in line 23: nn1FB S107 7,3
Error in line 29: nTGdbCMRqXP S319 79,5
